appId: com.toughra.ustadmobile
tags:
  - checklist4
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/004_002_add_course_comment_on_assignments"
  TESTNAME: 004_002_add_course_comment_on_assignments
---
#--------------------------------------------------APP 2--------------------------------------#
- clearState: com.toughra.ustadmobile
- clearState: com.toughra.ustadmobile2
- runFlow:
     file: "../common/startserver.yaml"
     env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
# admin able to add a course and edit that course
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
- runFlow:
    file: "../build/common-app2/create_course_with_1teacher_2students.yaml"
    env:
      TESTCOURSENAME: Test Course
#---------teacher add class comment--------------------#
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
#teacher login
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: t1
      PASSWORD: test
- runFlow:
    file:  "../common/add_assignment_Block.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
- runFlow:
    file: "../common/add_class_comments.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
      CLASSCOMMENT: Please comment here once you submit the assignment
#-------------------------------APP 2------student submit assignment and add class comment--------#
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
    env:
      USERNAME: s1
      PASSWORD: test
- runFlow:
    file: "../build/common-app2/add_class_comments.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
      CLASSCOMMENT: Ok Mam
#---------------------------------------------------APP 1 ------student login to view class comments---------------#
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: s2
      PASSWORD: test
- tapOn: "Courses"
- tapOn: "Test Course"
- tapOn: "Test Assignment"
- scroll
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/assignment_class_comments_studentView"
- clearState: com.toughra.ustadmobile
- clearState: com.toughra.ustadmobile2