appId: com.toughra.ustadmobile
tags:
  - assignments
  - multipleSubmission
env:
  TESTRESULTSDIR: "build/reports/maestro/004_003_multiple_submission_possible_for_student/Screenshots"
onFlowStart:
  - startRecording: 004_003_multiple_submission_possible_for_student
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
# Download student list
- runFlow:
    file: "common/download_file_via_browser.yaml"
    env:
      TESTFILENAME: "Ustad_Students_List.csv"
# download the assignment file
- runFlow:
    file:  "common/download_file_via_browser.yaml"
    env:
      TESTFILENAME: "Assignment_File.pdf"
# Admin login
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/admin_login.yaml"
# add new course
- runFlow:
    file: "common/add_course.yaml"
    env:
      TESTCOURSENAME: "Test Course Block"
# add new teacher using flow - add_new_teacher_inside_course ---------
- runFlow:
    file: "common/add_new_teacher_inside_course.yaml"
    env:
      TESTCOURSENAME: "Test Course Block"
      TEACHERFIRSTNAME: "Teacher"
      TEACHERLASTNAME: "1"
      USERNAME: "teach1"
      GENDER: "Female"
      PASSWORD: "testt1"
# add students to the course through bulk import using .csv file
- runFlow:
    file: "common/student_bulk_upload_csv.yaml"
    env:
      TESTFILENAME: "Ustad_Students_List.csv"
# teacher add an assignment block
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
# edit the course to add blocks
- tapOn:
    id: "floating_action_button"
# add assignment block ------ 1
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- runFlow:
    when:
      notVisible:
        text: "Assignment"
    commands:
      - swipe:
          from:
            text: "Drag handle"
          direction: UP
- tapOn: "Assignment"
- tapOn: "Title*"
- inputText: "Assignment 1"
- hideKeyboard
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- scrollUntilVisible:
    element:
      text: "Marked by"
    direction: DOWN
- tapOn: "Must submit all at once"
- tapOn: "Can make multiple submissions"
- assertVisible: "Done"
- takeScreenshot: "${TESTRESULTSDIR}/added_assignment"
- tapOn: "Done"
- assertNotVisible: "Done"
- tapOn: "Save"
# student submit assignment
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "stud1"
      PASSWORD: "tests1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Assignment 1"
    direction: DOWN
- tapOn: "Assignment 1"
- tapOn: "Text"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "Assignment done by student 1"
- tapOn: "Done"
- runFlow:
    file: "common/add_assignment_file.yaml"
    env:
      TESTFILENAME: "Assignment_File.pdf"
- scrollUntilVisible:
    element:
      text: "Submit"
    direction: DOWN
- tapOn: "Submit"
- assertVisible: "Submitted"
# teacher view and mark the assignment submitted by student
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Assignment 1"
    direction: DOWN
- tapOn: "Assignment 1"
- tapOn: "Submissions"
- assertVisible: "Student 1"
- tapOn: "Student 1"
# assert that teacher able to view text submitted by student
- assertVisible: "Assignment done by student 1"
# assert that teacher able to open and view file submitted by student
- assertVisible: "Assignment_File.pdf"
- tapOn: "Assignment_File.pdf"
- assertVisible: "Assignment test Pdf\r\n"
- back
- assertVisible: "Mark comment"
- tapOn: "Mark comment"
- inputText: "Good job"
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Mark*"
    direction: DOWN
- tapOn: "Mark*"
- inputText: "9"
- hideKeyboard
- tapOn: "Submit grade"
- scrollUntilVisible:
    element:
      text: "Result"
    direction: UP
- assertVisible: "9.0/10.0 Points"
# student able to view his grade
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "stud1"
      PASSWORD: "tests1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Assignment 1"
    direction: DOWN
- tapOn: "Assignment 1"
- assertVisible: "Marked"
- scrollUntilVisible:
    element:
      text: "Grades"
    direction: DOWN
- assertVisible: "9.0/10.0 Points"
#  Submission policy - Must submit all at once , so make sure Submit button is not visible
- scrollUntilVisible:
    element:
      text: "Text"
    direction: UP
- tapOn: "Text"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "This is 2nd text assignment"
- tapOn: "Done"
- scrollUntilVisible:
    element:
      text: "Submit"
    direction: DOWN
- tapOn: "Submit"
- assertVisible: "Submitted"
- scrollUntilVisible:
    element:
      text: "Submission 2"
    direction: DOWN
- assertVisible: "Submission 2"
- scrollUntilVisible:
    element:
      text: "Submission 1"
    direction: DOWN
- assertVisible: "Submission 1"
# teacher view and mark the assignment submitted by student
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Assignment 1"
    direction: DOWN
- tapOn: "Assignment 1"
- tapOn: "Submissions"
- assertVisible: "Student 1"
- tapOn: "Student 1"
# assert that teacher able to view text submitted by student
- assertVisible: "Assignment done by student 1"
- assertVisible: "Submission 2"
- assertVisible: "This is 2nd text assignment"
- scrollUntilVisible:
    element:
      text: "Mark*"
    direction: DOWN
- tapOn: "Mark*"
- inputText: "9.5"
- hideKeyboard
- tapOn: "Update grade"
- scrollUntilVisible:
    element:
      text: "Result"
    direction: UP
- assertVisible: "9.5/10.0 Points"
# student able to view his updated grade
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "stud1"
      PASSWORD: "tests1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Assignment 1"
    direction: DOWN
- tapOn: "Assignment 1"
- assertVisible: "Marked"
- scrollUntilVisible:
    element:
      text: "9.5/10.0 Points"
    direction: DOWN
- assertVisible: "9.5/10.0 Points"