appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/003_002_add_module_text_blocks_and_perform_indent_hide_delete_actions"
  TESTNAME:  "003_002_add_module_text_blocks_and_perform_indent_hide_delete_actions"
---
- runFlow:
    file: "../common/add_6_students_by_bulk_import.yaml"
    env:
      TESTFILENAME: "Ustad_Students_List.csv"
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
- tapOn: "Courses"
- tapOn: "Test Course Block"
# edit the course to add blocks
- tapOn:
    id: "floating_action_button"
# add assignment block ------ 1
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- swipe:
    from:
      text: "Drag handle" # From (x, y) center of element
    direction: UP # To (50% of width, 10% of height)

#- longPressOn: Drag handle
#- swipe:
#    start: 50%, 50% # From (50% of width, 50% of height)
#    end: 50%, 10% # To (50% of width, 10% of height)
- tapOn: "Assignment"
- tapOn: "Title*"
- inputText: "Assignment 1"
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
#- tapOn:
 #  text: dd/mm/yyyy
  # index: 0
#- inputText: 12/03/2024
- scrollUntilVisible:
    element:
      text: "Submission policy"
    direction: DOWN
- assertVisible: "Must submit all at once"
- assertVisible: "Done"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/added_assignment"
- tapOn:
    text: "Done"
    delay: 1000
- assertNotVisible: "Done"
- tapOn: "Save"