appId: com.toughra.ustadmobile
tags:
  - checklist4
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/004_004_multiple_submission_assignment"
  TESTNAME: "004_004_multiple_submission_assignment"
---
- clearState: com.toughra.ustadmobile
- clearState: com.toughra.ustadmobile2
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
- runFlow:
    file: "../build/common-app2/create_course_with_1teacher_2students.yaml"
    env:
      TESTCOURSENAME: Test Course
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
#teacher login
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: t1
      PASSWORD: test
- runFlow:
    file: "../common/add_multiple_submission_assignment.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
#-------------------------------------------------------------------------student submit assignment
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
    env:
      USERNAME: s1
      PASSWORD: test
- runFlow:
    file: "../build/common-app2/student_submit_assignment_text.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
      TEXT: "Numbers - 1,2,3,4,5,6,7,8,9,10"
#--------------------------------------------------------------------------teacher grade the assignment
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: t1
      PASSWORD: test
- runFlow:
    file: "../common/add_assignment_grade.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
      STUDENTNAME: Student 1
      POINT: 8
#----------------------------------------------student view assignment grade ------------#
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
    env:
      USERNAME: s1
      PASSWORD: test
- tapOn: "Courses"
- tapOn: "Test Course"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/assignment_grade_on_overviewPage_studentView1"
- tapOn:
    id: "com.toughra.ustadmobile2:id/item_course_block_icon"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/assignment_grade_on_assignmentPage_studentView1"
- runFlow:
    file: "../build/common-app2/student_submit_assignment_file.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
      TESTFILENAME: "Pdf_Content.pdf"
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
#--------------------------------------------------------------------------teacher re-grade the assignment
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: t1
      PASSWORD: test
- runFlow:
    file: "../common/update_assignment_grade.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
      STUDENTNAME: Student 1
      POINT: 9
#----------------------------------------------student view updated assignment grade ------------#
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
    env:
      USERNAME: s1
      PASSWORD: test
- tapOn: "Courses"
- tapOn: "Test Course"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/assignment_updated_grade_on_assignmentPage_studentView1"
- clearState: com.toughra.ustadmobile
- clearState: com.toughra.ustadmobile2